samples/_failures_safe/1761393675_7bfc91_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_b9c23d00.c: In function ‘read_token’:
./samples/SAFE/__tmp_b9c23d00.c:148:9: error: expected declaration or statement at end of input
  148 |         state->column++;
      |         ^~~~~
./samples/SAFE/__tmp_b9c23d00.c:148:9: error: expected declaration or statement at end of input
